--- a/src/styles/_mainText.scss
+++ b/src/styles/_mainText.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 200px;
     background: #83929F;
